This commit will change the color of the logged in user

--- a/src/App.css
+++ b/src/App.css
@@ -325,7 +325,7 @@ h1, h2, h4, p{
 .logged-in-user {
   margin: 0;
   font-size: 1.1em;
-  color: #52623b;
+  color: #ccc;
   font-weight: bold;
 }
 
